[tool.poetry]
name = "top-wiki-simple"
version = "0.1.0"
description = ""
authors = ["Nate Bohn <nathanbohn@gmail.com>"]
readme = "README.md"
packages = [{include = "top_wiki_simple"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
